@startuml
title TRAVELBUDDY Database ERD

hide circle
skinparam classAttributeIconSize 0

entity "users" as users {
  *id : BIGINT <<PK>>
  --
  username : VARCHAR(100)
  email : VARCHAR(100)
  password_hash : VARCHAR(255)
  role : VARCHAR(20)
  verified : TINYINT(1)
  verify_token : VARCHAR(255)
  reset_token : VARCHAR(255)
}

entity "flights" as flights {
  *id : BIGINT <<PK>>
  --
  airline : VARCHAR(100)
  flight_number : VARCHAR(20)
  origin : VARCHAR(10)
  destination : VARCHAR(10)
  region : VARCHAR(20)
  departure_time : DATETIME
  arrival_time : DATETIME
  price : DECIMAL(10,2)
  available_seats : INT
  cabin_class : VARCHAR(20)
}

entity "hotels" as hotels {
  *id : BIGINT <<PK>>
  --
  name : VARCHAR(100)
  location : VARCHAR(100)
  region : VARCHAR(20)
  address : VARCHAR(255)
  stars : INT
  price_per_night : DECIMAL(10,2)
  description : TEXT
  amenities : VARCHAR(500)
  available_rooms : INT
  image_url : VARCHAR(500)
}

entity "destinations" as destinations {
  *id : BIGINT <<PK>>
  --
  slug : VARCHAR(120)
  name : VARCHAR(200)
  subtitle : VARCHAR(200)
  image_url : VARCHAR(1000)
  description : TEXT
  map_embed_url : TEXT
}

entity "destination_highlights" as destination_highlights {
  *id : BIGINT <<PK>>
  --
  destination_id : BIGINT <<FK>>
  highlight : VARCHAR(255)
  sort_order : INT
}

entity "destination_activities" as destination_activities {
  *id : BIGINT <<PK>>
  --
  destination_id : BIGINT <<FK>>
  title : VARCHAR(255)
  image_url : VARCHAR(1000)
  description : VARCHAR(500)
  sort_order : INT
}

entity "bookings" as bookings {
  *id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  flight_id : BIGINT <<FK>>
  hotel_id : BIGINT <<FK>>
  booking_code : VARCHAR(20)
  booking_type : VARCHAR(20)
  booking_date : DATETIME
  flight_date : DATE
  check_in_date : DATE
  hotel_nights : INT
  status : VARCHAR(20)
  total_price : DECIMAL(10,2)
  contact_name : VARCHAR(120)
  contact_email : VARCHAR(120)
  contact_phone : VARCHAR(40)
}

entity "passengers" as passengers {
  *id : BIGINT <<PK>>
  --
  booking_id : BIGINT <<FK>>
  full_name : VARCHAR(120)
  gender : VARCHAR(20)
  date_of_birth : DATE
  nationality : VARCHAR(60)
  id_number : VARCHAR(80)
  passenger_type : VARCHAR(20)
}

entity "add_ons" as add_ons {
  *id : BIGINT <<PK>>
  --
  name : VARCHAR(120)
  description : VARCHAR(500)
  price : DECIMAL(10,2)
  category : VARCHAR(30)
  scope : VARCHAR(20)
  active : TINYINT(1)
}

entity "booking_add_ons" as booking_add_ons {
  *id : BIGINT <<PK>>
  --
  booking_id : BIGINT <<FK>>
  add_on_id : BIGINT <<FK>>
  quantity : INT
  unit_price : DECIMAL(10,2)
}

entity "user_preferences" as user_preferences {
  *id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  preferred_destinations : VARCHAR(255)
  budget_range : VARCHAR(50)
  travel_style : VARCHAR(50)
  accommodation_type : VARCHAR(50)
  interests : VARCHAR(255)
}

users ||--o{ bookings : user_id
flights ||--o{ bookings : flight_id
hotels ||--o{ bookings : hotel_id

bookings ||--o{ passengers : booking_id
bookings ||--o{ booking_add_ons : booking_id
add_ons ||--o{ booking_add_ons : add_on_id

users ||--o{ user_preferences : user_id

destinations ||--o{ destination_highlights : destination_id
destinations ||--o{ destination_activities : destination_id

@enduml
